# BrackeysGameJam-2023.1

./: .gitmodules  CMakeLists.txt  README.txt
.github/workflows/: cmake.yml
inc/game/: render_buffers.h  renderer.h  shader.h  texture.h  window.h
inc/math/: .deprecated  mat4.h  vec2.h  vec3.h  vec4.h
inc/util/: file.h
lib/stbi/: CMakeLists.txt
lib/stbi/inc/: stb_image.h
res/shaders/fragment/: base_fragment.fsh  quad_shader.fsh
res/shaders/vertex/: advanced_vertex.vsh  base_vertex.vsh
src/: file.c  main.c  mat4.c  render_buffers.c  renderer.c  shader.c  texture.c  vec2.c  vec3.c  vec4.c  window.c
